[gd_scene load_steps=17 format=3 uid="uid://haa0x4touaqt"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_01wgv"]
[ext_resource type="PackedScene" uid="uid://bffcbsl5aveun" path="res://Scenes/level_01.tscn" id="1_3i4w5"]
[ext_resource type="PackedScene" uid="uid://cdqa6r1g2popf" path="res://Scenes/player.tscn" id="2_klli8"]
[ext_resource type="PackedScene" uid="uid://6jdpjfaiu0i6" path="res://Scenes/unity.tscn" id="4_p7la5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_sk88s"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_0b8sj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_6m8l7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_544rj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="7_efpj0"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="8_3vo5w"]
[ext_resource type="Script" path="res://Scripts/UnityTrigger.gd" id="11_ic1vu"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_x2hwy"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_6i7dw"]
sky_material = SubResource("ProceduralSkyMaterial_x2hwy")

[sub_resource type="Environment" id="Environment_gg6u8"]
background_mode = 2
sky = SubResource("Sky_6i7dw")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_wasdt"]
vertices = PackedVector3Array(-39.5, 0.2974, -49.5, -49.5, 0.2974, -49.5, -49.5, 0.2974, -39, -29.5, 0.2974, -49.5, -39.5, 0.2974, -49.5, -49.5, 0.2974, -39, -29.5, 0.2974, -49.5, -49.5, 0.2974, -39, -49.5, 0.2974, -28.5, -19.5, 0.2974, -49.5, -9.25, 0.2974, -8.5, -9.25, 0.2974, -49.5, -19.5, 0.2974, -49.5, -49.5, 0.2974, -28.5, -49.5, 0.2974, -18, -49.5, 0.2974, -7.25, -10.25, 0.2974, -7.25, -10.25, 0.2974, -8.25, -49.5, 0.2974, -7.25, -10.25, 0.2974, -8.25, -9.25, 0.2974, -8.5, -49.5, 0.2974, -18, 14.5, 0.2974, -14.25, 15.75, 0.2974, -14.75, 15.75, 0.2974, -16.75, 14.5, 0.2974, -17.25, 10.75, 0.2974, -14.75, 11.25, 0.2974, -13.5, -8, 0.2974, -6.5, -8.5, 0.2974, -6.25, -5.75, 0.2974, -4.75, -5.5, 0.2974, -5.25, 16.25, 0.2974, -19, 24.25, 0.2974, -24.25, 24.25, 0.2974, -25.5, 8, 0.2974, -49.5, -0.75, 0.2974, -49.5, 14.75, 0.2974, -18.75, 24.25, 0.2974, -25.5, 16.5, 0.2974, -49.5, 8, 0.2974, -49.5, 11.25, 0.2974, -13.5, 14.5, 0.2974, -13.5, 14.5, 0.2974, -14.25, 0.25, 0.2974, -9.75, 9, 0.2974, -14.25, 9.5, 0.2974, -14.75, -1.5, 0.2974, -9.75, 8.25, 0.2974, -9, 9.5, 0.2974, -9, 9.75, 0.2974, -12.5, 9, 0.2974, -13, -8, 0.2974, -8.25, -8, 0.2974, -6.5, -5.5, 0.2974, -5.25, -4, 0.2974, -5.25, -1.75, 0.2974, -8, -1.5, 0.2974, -9.75, 24.25, 0.2974, -25.5, 25.25, 0.2974, -26, 25.25, 0.2974, -49.5, 16.5, 0.2974, -49.5, -9.25, 0.2974, -8.5, -8, 0.2974, -8.25, -1.5, 0.2974, -9.75, 16.75, 0.2974, -18.25, 25, 0.2974, -23.75, 24.25, 0.2974, -24.25, 16.25, 0.2974, -19, 8, 0.2974, -8.25, 8.25, 0.2974, -9, 9, 0.2974, -13, 9, 0.2974, -14.25, 0.25, 0.2974, -9.75, 0.5, 0.2974, -8.25, 9.5, 0.2974, -14.75, 10.75, 0.2974, -14.75, 14.5, 0.2974, -17.25, 14.75, 0.2974, -18.75, -1.5, 0.2974, -9.75, 9.5, 0.2974, -14.75, 14.75, 0.2974, -18.75, -0.75, 0.2974, -49.5, -9.25, 0.2974, -49.5, -9.25, 0.2974, -8.5, 49.5, 0.2974, -43.5, 49.5, 0.2974, -49.5, 43.25, 0.2974, -49.5, 49.5, 0.2974, -43.5, 43.25, 0.2974, -49.5, 37.25, 0.2974, -49.5, 49.5, 0.2974, -37.25, 26, 0.2974, -26, 26.5, 0.2974, -24.75, 49.5, 0.2974, -24.75, 49.5, 0.2974, -31, 37.25, 0.2974, -49.5, 25.25, 0.2974, -49.5, 49.5, 0.2974, -31, 49.5, 0.2974, -37.25, 37.25, 0.2974, -49.5, 25.25, 0.2974, -49.5, 25.25, 0.2974, -26, 26, 0.2974, -26, 16.75, 0.2974, -17, 15.75, 0.2974, -16.75, 15.75, 0.2974, -14.75, 16.75, 0.2974, -17, 15.75, 0.2974, -14.75, 16.75, 0.2974, -14.5, 26.25, 0.2974, -23.75, 25, 0.2974, -23.75, 10.75, 0.2974, -12.5, 9.75, 0.2974, -12.5, 9.5, 0.2974, -9, 10, 0.2974, -8.75, 12.5, 0.2974, 49.5, 18.5, 0.2974, 49.5, 49.5, 0.2974, 30.75, 49.5, 0.2974, 21.5, 15, 0.2974, -12.5, 14.5, 0.2974, -13.5, 11.25, 0.2974, -13.5, 10.75, 0.2974, -12.5, 10, 0.2974, -8.75, 10, 0.2974, -7.25, 24.75, 0.2974, 49.5, 30.75, 0.2974, 49.5, 49.5, 0.2974, 40, 49.5, 0.2974, -6.25, 49.5, 0.2974, -15.5, 26.25, 0.2974, -23.75, 24.75, 0.2974, 49.5, 49.5, 0.2974, 40, 49.5, 0.2974, 30.75, 18.5, 0.2974, 49.5, 16.5, 0.2974, -12.5, 15, 0.2974, -12.5, 10, 0.2974, -7.25, 49.5, 0.2974, 12.25, 49.5, 0.2974, 3, 8.5, 0.2974, -7, 1.25, 0.2974, -2, 1.25, 0.2974, -0.5, 10, 0.2974, -7.25, 25, 0.2974, -23.75, 16.75, 0.2974, -18.25, 16.75, 0.2974, -17, 49.5, 0.2974, 21.5, 49.5, 0.2974, 12.25, 10, 0.2974, -7.25, 1.25, 0.2974, -0.5, 6.25, 0.2974, 49.5, 12.5, 0.2974, 49.5, 43.25, 0.2974, 49.5, 49.5, 0.2974, 49.5, 49.5, 0.2974, 40, 49.5, 0.2974, -24.75, 26.5, 0.2974, -24.75, 26.25, 0.2974, -23.75, 49.5, 0.2974, -15.5, 1.25, 0.2974, -0.5, 0.25, 0.2974, -0.25, 0.25, 0.2974, 49.5, 6.25, 0.2974, 49.5, 26.25, 0.2974, -23.75, 16.75, 0.2974, -14.5, 16.5, 0.2974, -12.5, 49.5, 0.2974, 3, 49.5, 0.2974, -6.25, 37, 0.2974, 49.5, 43.25, 0.2974, 49.5, 49.5, 0.2974, 40, 30.75, 0.2974, 49.5, 37, 0.2974, 49.5, 49.5, 0.2974, 40, -3.5, 0.2974, -3.25, -3.25, 0.2974, -3.25, -2.75, 0.2974, -4, -3.5, 0.2974, -5, 8, 0.2974, -7.25, 8, 0.2974, -8.25, 0.5, 0.2974, -8.25, -3.5, 0.2974, -5, -2.75, 0.2974, -4, -1.5, 0.2974, -4, -1.5, 0.2974, -7.5, -1, 0.2974, -3.5, -1, 0.2974, -2.25, 1, 0.2974, -2.5, -1.5, 0.2974, -4, -1, 0.2974, -3.5, 1, 0.2974, -2.5, 0.25, 0.2974, -7.5, -1.5, 0.2974, -7.5, -1.5, 0.2974, -7.5, -1.75, 0.2974, -8, -4, 0.2974, -5.25, -3.5, 0.2974, -5, 0.25, 0.2974, -7.5, 1, 0.2974, -2.5, 1.25, 0.2974, -2, 8.5, 0.2974, -7, 8, 0.2974, -7.25, 0.5, 0.2974, -8.25, -3, 0.2974, -1.75, -3.25, 0.2974, -3.25, -3.5, 0.2974, -3.25, -5.5, 0.2974, -3, -1, 0.2974, -0.5, -1, 0.2974, -2, -3, 0.2974, -1.75, -5.5, 0.2974, -3, -49.5, 0.2974, 13.75, -49.5, 0.2974, 21, -12.25, 0.2974, 49.5, -6, 0.2974, 49.5, -1, 0.2974, -0.5, -5.5, 0.2974, -3, -5.75, 0.2974, -4.75, -8.5, 0.2974, -6.25, -10, 0.2974, -6.25, -49.5, 0.2974, 6.75, -49.5, 0.2974, 13.75, -1, 0.2974, -0.5, -3, 0.2974, -1.75, -5.5, 0.2974, -3, -10, 0.2974, -6.25, -49.5, 0.2974, -0.25, -49.5, 0.2974, 6.75, -49.5, 0.2974, 42.25, -49.5, 0.2974, 49.5, -43.5, 0.2974, 49.5, -49.5, 0.2974, 42.25, -43.5, 0.2974, 49.5, -37.25, 0.2974, 49.5, -49.5, 0.2974, 35.25, -49.5, 0.2974, 42.25, -37.25, 0.2974, 49.5, -31, 0.2974, 49.5, -49.5, 0.2974, 21, -49.5, 0.2974, 28, -18.5, 0.2974, 49.5, -12.25, 0.2974, 49.5, -49.5, 0.2974, 28, -49.5, 0.2974, 35.25, -31, 0.2974, 49.5, -24.75, 0.2974, 49.5, 0.25, 0.2974, 49.5, 0.25, 0.2974, -0.25, -1, 0.2974, -0.5, -6, 0.2974, 49.5, -49.5, 0.2974, 28, -24.75, 0.2974, 49.5, -18.5, 0.2974, 49.5, -10, 0.2974, -6.25, -10.25, 0.2974, -7.25, -49.5, 0.2974, -7.25, -49.5, 0.2974, -0.25)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 9), PackedInt32Array(13, 12, 14), PackedInt32Array(14, 12, 11), PackedInt32Array(14, 11, 10), PackedInt32Array(17, 16, 15), PackedInt32Array(19, 18, 20), PackedInt32Array(20, 18, 21), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(25, 22, 26), PackedInt32Array(26, 22, 27), PackedInt32Array(31, 30, 28), PackedInt32Array(28, 30, 29), PackedInt32Array(33, 32, 34), PackedInt32Array(34, 32, 37), PackedInt32Array(34, 37, 35), PackedInt32Array(35, 37, 36), PackedInt32Array(38, 40, 39), PackedInt32Array(43, 42, 41), PackedInt32Array(45, 44, 46), PackedInt32Array(46, 44, 47), PackedInt32Array(50, 49, 51), PackedInt32Array(51, 49, 48), PackedInt32Array(53, 52, 54), PackedInt32Array(54, 52, 55), PackedInt32Array(55, 52, 56), PackedInt32Array(56, 52, 57), PackedInt32Array(59, 58, 60), PackedInt32Array(60, 58, 61), PackedInt32Array(64, 63, 62), PackedInt32Array(68, 67, 65), PackedInt32Array(65, 67, 66), PackedInt32Array(70, 69, 71), PackedInt32Array(71, 69, 72), PackedInt32Array(72, 69, 73), PackedInt32Array(73, 69, 74), PackedInt32Array(76, 75, 77), PackedInt32Array(77, 75, 78), PackedInt32Array(80, 79, 81), PackedInt32Array(81, 79, 84), PackedInt32Array(81, 84, 82), PackedInt32Array(82, 84, 83), PackedInt32Array(87, 86, 85), PackedInt32Array(89, 88, 90), PackedInt32Array(90, 88, 91), PackedInt32Array(93, 92, 94), PackedInt32Array(94, 92, 95), PackedInt32Array(95, 92, 96), PackedInt32Array(96, 92, 97), PackedInt32Array(100, 99, 98), PackedInt32Array(103, 102, 101), PackedInt32Array(106, 105, 104), PackedInt32Array(108, 107, 109), PackedInt32Array(109, 107, 111), PackedInt32Array(109, 111, 110), PackedInt32Array(114, 113, 115), PackedInt32Array(115, 113, 112), PackedInt32Array(117, 116, 118), PackedInt32Array(118, 116, 119), PackedInt32Array(121, 120, 122), PackedInt32Array(122, 120, 123), PackedInt32Array(123, 120, 124), PackedInt32Array(124, 120, 125), PackedInt32Array(128, 127, 126), PackedInt32Array(131, 130, 129), PackedInt32Array(132, 135, 133), PackedInt32Array(133, 135, 134), PackedInt32Array(137, 136, 138), PackedInt32Array(138, 136, 140), PackedInt32Array(138, 140, 139), PackedInt32Array(142, 141, 143), PackedInt32Array(143, 141, 144), PackedInt32Array(147, 146, 145), PackedInt32Array(149, 148, 150), PackedInt32Array(150, 148, 151), PackedInt32Array(151, 148, 153), PackedInt32Array(151, 153, 152), PackedInt32Array(156, 155, 154), PackedInt32Array(158, 157, 159), PackedInt32Array(159, 157, 160), PackedInt32Array(162, 161, 163), PackedInt32Array(163, 161, 164), PackedInt32Array(166, 165, 167), PackedInt32Array(167, 165, 169), PackedInt32Array(167, 169, 168), PackedInt32Array(172, 171, 170), PackedInt32Array(175, 174, 173), PackedInt32Array(177, 176, 178), PackedInt32Array(178, 176, 179), PackedInt32Array(182, 181, 180), PackedInt32Array(184, 183, 185), PackedInt32Array(185, 183, 186), PackedInt32Array(189, 188, 187), PackedInt32Array(191, 190, 192), PackedInt32Array(192, 190, 193), PackedInt32Array(193, 190, 194), PackedInt32Array(198, 197, 195), PackedInt32Array(195, 197, 196), PackedInt32Array(200, 199, 201), PackedInt32Array(201, 199, 204), PackedInt32Array(201, 204, 203), PackedInt32Array(201, 203, 202), PackedInt32Array(206, 205, 207), PackedInt32Array(207, 205, 208), PackedInt32Array(211, 210, 209), PackedInt32Array(212, 217, 213), PackedInt32Array(213, 217, 214), PackedInt32Array(214, 217, 215), PackedInt32Array(215, 217, 216), PackedInt32Array(220, 219, 221), PackedInt32Array(221, 219, 218), PackedInt32Array(221, 218, 222), PackedInt32Array(222, 218, 223), PackedInt32Array(226, 225, 224), PackedInt32Array(229, 228, 227), PackedInt32Array(232, 231, 230), PackedInt32Array(233, 235, 234), PackedInt32Array(237, 236, 238), PackedInt32Array(238, 236, 239), PackedInt32Array(241, 240, 242), PackedInt32Array(242, 240, 243), PackedInt32Array(246, 245, 247), PackedInt32Array(247, 245, 244), PackedInt32Array(249, 248, 250), PackedInt32Array(250, 248, 251), PackedInt32Array(254, 253, 252), PackedInt32Array(256, 255, 257), PackedInt32Array(257, 255, 258)]

[sub_resource type="SphereShape3D" id="SphereShape3D_hn34j"]

[node name="main" type="Node3D"]
script = ExtResource("1_01wgv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gg6u8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 2.04424, 0)
shadow_enabled = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_wasdt")

[node name="level01" parent="NavigationRegion3D" instance=ExtResource("1_3i4w5")]

[node name="player" parent="." instance=ExtResource("2_klli8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0927247, -34)

[node name="NavigationAgentRobot" type="NavigationAgent3D" parent="player"]
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.47451, 0.45098, 0.321569, 1)

[node name="Unity" parent="." instance=ExtResource("4_p7la5")]
transform = Transform3D(0.999884, 0.0152536, 0, -0.0152536, 0.999884, 0, 0, 0, 1, -14.0005, 1.64045, -14.3689)

[node name="NavigationAgentUnity" type="NavigationAgent3D" parent="Unity"]
debug_enabled = true

[node name="Area3D2" type="Area3D" parent="Unity"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Unity/Area3D2"]
transform = Transform3D(1, 9.31325e-10, 0, -9.31325e-10, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_hn34j")

[node name="StateChartDebugger" parent="." instance=ExtResource("8_3vo5w")]
offset_left = 3.0
offset_top = 4.0
offset_right = -950.0
offset_bottom = 4.0
enabled = false
initial_node_to_watch = NodePath("../StateChart")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_sk88s")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("7_efpj0")

[node name="Robot" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("5_0b8sj")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/ParallelState/Robot"]
script = ExtResource("6_6m8l7")

[node name="To Run" type="Node" parent="StateChart/ParallelState/Robot/Idle"]
script = ExtResource("7_544rj")
to = NodePath("../../Run")
delay_seconds = 2.0

[node name="Run" type="Node" parent="StateChart/ParallelState/Robot"]
script = ExtResource("6_6m8l7")

[node name="To Wave" type="Node" parent="StateChart/ParallelState/Robot/Run"]
script = ExtResource("7_544rj")
to = NodePath("../../Wave")
event = &"Wave"

[node name="Wave" type="Node" parent="StateChart/ParallelState/Robot"]
script = ExtResource("6_6m8l7")

[node name="To Hurt" type="Node" parent="StateChart/ParallelState/Robot/Wave"]
script = ExtResource("7_544rj")
to = NodePath("../../Hurt")
event = &"Hurt"
delay_seconds = 3.0

[node name="Hurt" type="Node" parent="StateChart/ParallelState/Robot"]
script = ExtResource("6_6m8l7")

[node name="To Attack" type="Node" parent="StateChart/ParallelState/Robot/Hurt"]
script = ExtResource("7_544rj")
to = NodePath("../../Attack")
delay_seconds = 3.0

[node name="Attack" type="Node" parent="StateChart/ParallelState/Robot"]
script = ExtResource("6_6m8l7")

[node name="Unity" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("5_0b8sj")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/ParallelState/Unity"]
script = ExtResource("6_6m8l7")

[node name="To Sneak" type="Node" parent="StateChart/ParallelState/Unity/Idle"]
script = ExtResource("7_544rj")
to = NodePath("../../Sneak")
event = &"robot_noticed"

[node name="Sneak" type="Node" parent="StateChart/ParallelState/Unity"]
script = ExtResource("6_6m8l7")

[node name="To Run Away" type="Node" parent="StateChart/ParallelState/Unity/Sneak"]
script = ExtResource("7_544rj")
to = NodePath("../../Run Away")
event = &"RunAway"

[node name="Run Away" type="Node" parent="StateChart/ParallelState/Unity"]
script = ExtResource("6_6m8l7")

[node name="WavePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
visible = false

[node name="UnityTrigger" type="RayCast3D" parent="."]
transform = Transform3D(-1.74846e-06, -40, 0, -1.74846e-06, 7.64274e-14, -40, 40, -1.74846e-06, -1.74846e-06, -21.115, 1, -12.6281)
visible = false
collide_with_areas = true
script = ExtResource("11_ic1vu")

[node name="FleePoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.1255, 0, -30.9561)

[connection signal="area_entered" from="Unity/Area3D2" to="." method="_on_area_3d_2_area_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Robot/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Robot/Run" to="." method="_on_run_state_entered"]
[connection signal="state_exited" from="StateChart/ParallelState/Robot/Run" to="." method="_on_run_state_exited"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Robot/Run" to="." method="_on_run_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Robot/Wave" to="." method="_on_wave_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Robot/Wave" to="." method="_on_wave_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Robot/Hurt" to="." method="_on_hurt_state_entered"]
[connection signal="state_entered" from="StateChart/ParallelState/Robot/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Robot/Attack" to="." method="_on_attack_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Unity/Sneak" to="." method="_on_sneak_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Unity/Sneak" to="." method="_on_sneak_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Unity/Run Away" to="." method="_on_run_away_state_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Unity/Run Away" to="." method="_on_run_away_state_physics_processing"]
